# pesquisa-candidatos

./: gerar_dados_dos_candidatos.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
pages/: comparacao_de_candidatos_por_votos.py  graficos_gerais.py  identificar_presenca_dos_candidatos.py  pesquisa_candidato_presenca.py  presenca_do_candidato_nas_urnas.py
