[project]
name = "consulta_candidatos"
version = "0.1.0"
description = ""
authors = [
    {name = "HugoM",email = "hugo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "streamlit (>=1.53.1,<2.0.0)",
    "unidecode (>=1.4.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "xlsxwriter (>=3.2.9,<4.0.0)",
    "polars (>=1.38.0,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"